Fix: fixed gap between header and book-grid

--- a/styles.css
+++ b/styles.css
@@ -146,7 +146,7 @@ button {
     padding: max(10px, 1rem);
     border-radius: 1rem 1rem 0 0;
     width: 100%;
-    height: 95%;
+    height: 100%;
     gap: 1rem;
 }
 
